--- a/styles/contactStyle.css
+++ b/styles/contactStyle.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,800');
 
+/* HIDING METHODS */
+
+.blockForTableMobile{
+  display: none;
+}
+
+.enclosureMobile{
+  display: none;
+}
+
+
 hr{
   margin-top: 0;
   margin-bottom: 0;
@@ -122,4 +133,52 @@ footer{
   margin-top: 5px;
   width: 25px;
   height: 25px;
+}
+
+/* MEDIA QUERIES TABLET - 768px */
+
+@media screen and (max-width: 800px) {
+
+  body{
+  }
+
+  .blockForTable{
+    display: none;
+  }
+
+  .blockForTableMobile{
+    background-color: black;
+    width: 100%;
+    margin: auto;
+    display: block;
+  }
+  .nameBar{
+    text-align: center;
+  }
+
+  .enclosure{
+    display: none;
+  }
+
+  .enclosureMobile{
+    display:block;
+    background-color: #DCDCDC;
+    width: 100%;
+    margin:auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .picHolder{
+    margin: auto;
+    text-align: center;
+  }
+  .mobilePic{
+    width: 75%;
+    height: auto;
+    margin: auto;
+    float: none;
+
+  }
+
 }
